fix(design): Overflow on the badge in the auth menu

--- a/src/pages/auth/Menu.module.scss
+++ b/src/pages/auth/Menu.module.scss
@@ -23,6 +23,7 @@
   flex-direction: column;
   padding: 25px;
   position: relative;
+  overflow: visible;
 
   h1 {
     font-size: 15px;
